--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve"
   },
@@ -14,10 +13,9 @@
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-img": "^0.8.0",
+    "@11ty/eleventy-navigation": "^0.1.6",
     "html-minifier": "^4.0.0",
-    "js-yaml": "^3.14.1"
-  },
-  "devDependencies": {
-    "@11ty/eleventy-navigation": "^0.1.6"
+    "js-yaml": "^3.14.1",
+    "rollup": "^2.39.0"
   }
 }
