🚀 Slash build times!
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
     "build": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Snapstromegon/hoeser.dev.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Snapstromegon/hoeser.dev/issues"
+  },
+  "homepage": "https://github.com/Snapstromegon/hoeser.dev#readme",
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-img": "^0.8.0",
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
     "html-minifier": "^4.0.0",
-    "js-yaml": "^3.14.1",
-    "rollup": "^2.39.0"
+    "js-yaml": "^4.0.0",
+    "rollup": "^2.40.0"
   }
 }
