--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-img": "^0.8.0",
     "@11ty/eleventy-navigation": "^0.1.6",
+    "@11ty/eleventy-plugin-rss": "^1.1.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.0.0",
