--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.2.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "js-yaml": "^4.1.0",
-    "rollup": "^2.66.1"
+    "lit": "^2.1.2",
+    "rollup": "^2.66.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1"
   }
 }
