--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lit": "^2.1.2",
     "rollup": "^2.66.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.1"
+    "rollup-plugin-typescript2": "^0.31.1",
+    "typescript": "^4.5.5"
   }
 }
