Add my own name
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_data/meta.yml
+++ b/src/_data/meta.yml
@@ -1,4 +1,4 @@
-site_name: Snapstromegon's Blog
+site_name: Snapstromegon's Blog (Raphael Höser)
 site_short_name: "Snapstromegon:Blog"
 description: "See what I'm writing about the world and development."
 domain: hoeser.dev
