Was missing some data on the start page
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_data/meta.yml
+++ b/src/_data/meta.yml
@@ -1,6 +1,6 @@
 site_name: Snapstromegon's Blog (Raphael Höser)
 site_short_name: "Snapstromegon:Blog"
-description: "See what I'm writing about the world and development."
+description: "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development."
 domain: hoeser.dev
 theme_color: "#222"
 subtitle: All thoughts are HTTP 203
