--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "js-yaml": "^4.1.0",
     "lit": "^2.1.2",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-emoji": "^2.0.0",
     "rollup": "^2.66.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
