--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.2.2",
+    "@inventage/matomo-opt-out": "^1.3.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "js-yaml": "^4.1.0",
     "lit": "^2.1.2",
