Add redirect for old blogpost path
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,11 @@
   for = "/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
+
+[[redirects]]
+  from = "/posts/2021-02-28-11ty-and-rollup"
+  to = "/blog/2021-02-28-11ty-and-rollup"
+
+[[redirects]]
+  from = "/posts/2021-02-28-11ty-and-rollup/"
+  to = "/blog/2021-02-28-11ty-and-rollup/"
