--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@inventage/matomo-opt-out": "^1.3.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "eleventy-plugin-rollup": "^1.0.1",
     "js-yaml": "^4.1.0",
     "lit": "^2.2.7",
     "markdown-it-container": "^3.0.0",
