--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog.hoeser.dev",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,21 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@inventage/matomo-opt-out": "^1.3.0",
+    "lit": "^2.4.0"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^2.0.0-canary.16",
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-    "@inventage/matomo-opt-out": "^1.3.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "eleventy-plugin-rollup": "^1.2.1",
     "js-yaml": "^4.1.0",
-    "lit": "^2.4.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-emoji": "^2.0.2",
-    "rollup": "^3.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^4.8.4"
+    "rollup": "^3.2.3",
+    "typescript": "^4.8.4",
+    "tslib": "^2.4.0"
   }
 }
