Add lighthouse to builds
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/netlify.toml
+++ b/netlify.toml
@@ -30,3 +30,9 @@
 [[redirects]]
   from = "/webdev-sins/vw-font-size/"
   to = "/webdev-sins/2022-02-07-vw-font-size/"
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+  [plugins.inputs.thresholds]
+    performance = 0.9
