--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "@inventage/matomo-opt-out": "^1.3.0",
-    "lit": "^2.5.0"
+    "lit": "^2.6.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.20",
+    "@11ty/eleventy": "^2.0.0-beta.1",
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^10.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "eleventy-plugin-rollup": "^1.2.1",
     "js-yaml": "^4.1.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-emoji": "^2.0.2",
-    "rollup": "^3.7.5",
+    "rollup": "^3.10.0",
     "typescript": "^4.9.4",
     "tslib": "^2.4.1"
   }
