--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "markdown-it-emoji": "^2.0.2",
     "rollup": "^3.11.0",
     "typescript": "^4.9.4",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "shiki": "^0.14.0"
   }
 }
