--- a/netlify.toml
+++ b/netlify.toml
@@ -31,28 +31,27 @@
   from = "/webdev-sins/vw-font-size/"
   to = "/webdev-sins/2022-02-07-vw-font-size/"
 
-# [[plugins]]
-#   package = "@netlify/plugin-lighthouse"
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
 
-#   [plugins.inputs.thresholds]
-#     performance = 0.95
-#     accessibility = 1
-#     best-practices = 1
-#     seo = 1
-#     pwa = 1
+  [plugins.inputs.thresholds]
+    performance = 0.95
+    accessibility = 1
+    best-practices = 1
+    seo = 1
+    pwa = 1
 
-#   [[plugins.inputs.audits]]
-#     path = "/"
+  [[plugins.inputs.audits]]
+    path = "/"
 
-#   [[plugins.inputs.audits]]
-#     path = "blog/"
+  [[plugins.inputs.audits]]
+    path = "blog/"
 
-#   [[plugins.inputs.audits]]
-#     path = "blog/2022-07-29-starter-packs/"
+  [[plugins.inputs.audits]]
+    path = "blog/2022-07-29-starter-packs/"
 
-#   [[plugins.inputs.audits]]
-#     path = "webdev-sins/"
+  [[plugins.inputs.audits]]
+    path = "webdev-sins/"
 
-#   [[plugins.inputs.audits]]
-#     path = "webdev-sins/2022-01-05-button-as-link/"
-
+  [[plugins.inputs.audits]]
+    path = "webdev-sins/2022-01-05-button-as-link/"
