--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "browserslist": "^4.21.5",
     "cross-env": "^7.0.3",
     "eleventy-plugin-rollup": "^1.3.0",
     "eslint": "^8.35.0",
     "globals": "^13.20.0",
     "js-yaml": "^4.1.0",
+    "lightningcss": "^1.19.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-emoji": "^2.0.2",
     "rollup": "^3.18.0",
