--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@inventage/matomo-opt-out": "^1.3.0",
-    "lit": "^2.7.6"
+    "lit": "^2.7.6",
+    "markdown-it-anchor": "^8.6.7"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
