--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grafana/faro-web-sdk": "^1.2.0",
     "@inventage/matomo-opt-out": "^1.3.0",
     "lit": "^2.8.0"
   },
@@ -21,6 +22,7 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@eslint/js": "^8.49.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
