Add mini-faro as a test
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitOverride": true,
     "useDefineForClassFields": false,
+    "resolveJsonModule": true,
     "plugins": [
       {
         "name": "ts-lit-plugin",
