--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.2.0",
     "@inventage/matomo-opt-out": "^1.3.0",
-    "lit": "^2.8.0"
+    "lit": "^2.8.0",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
@@ -23,6 +24,7 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@eslint/js": "^8.49.0",
     "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
