--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@grafana/faro-web-sdk": "^1.2.5",
     "@inventage/matomo-opt-out": "^1.3.0",
     "lit": "^3.0.2",
+    "netlify-plugin-cache": "^1.0.3",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
