--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.13",
+    "@typescript-eslint/parser": "^8.0.0-alpha.13",
     "browserslist": "^4.23.0",
     "cross-env": "^7.0.3",
     "eleventy-plugin-rollup": "^1.3.0",
