--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve",
-    "lint": "cross-env ESLINT_USE_FLAT_CONFIG=true eslint . -c eslint.config.js"
+    "lint": "npx cross-env ESLINT_USE_FLAT_CONFIG=true eslint . -c eslint.config.js"
   },
   "type": "module",
   "keywords": [],
