--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx @11ty/eleventy",
     "serve": "npx @11ty/eleventy --serve",
-    "lint": "npx cross-env ESLINT_USE_FLAT_CONFIG=true eslint . -c eslint.config.js"
+    "lint": "eslint . -c eslint.config.js"
   },
   "type": "module",
   "keywords": [],
@@ -33,7 +33,6 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.45",
     "@typescript-eslint/parser": "^8.0.0-alpha.45",
     "browserslist": "^4.23.2",
-    "cross-env": "^7.0.3",
     "eleventy-plugin-rollup": "^1.3.0",
     "eslint": "^9.7.0",
     "globals": "^15.8.0",
